deployment/container-security-context.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
spec:
  template:
    spec:
      containers:
      - name: ui-service
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service
spec:
  template:
    spec:
      containers:
      - name: deployment-service
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-service
spec:
  template:
    spec:
      containers:
      - name: provider-service
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: governance-service
spec:
  template:
    spec:
      containers:
      - name: governance-service
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enduser-service
spec:
  template:
    spec:
      containers:
      - name: enduser-service
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-website
spec:
  template:
    spec:
      containers:
      - name: marketing-website
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
