deployment/pod-security-context.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-service
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: governance-service
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enduser-service
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-website
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
